feat: update widget access key flow
